--- a/8-module/2-task/index.html
+++ b/8-module/2-task/index.html
@@ -7,8 +7,8 @@
   <title>Бангкок Экспресс: Иконка корзины</title>
 
   <link rel="stylesheet" href="./index.css" />
-  <link rel="stylesheet" href="../../../6-module/2-task/index.css">
-  <link rel="stylesheet" href="/assets/styles/common.css" />
+  <link rel="stylesheet" href="../../6-module/2-task/index.css">
+  <link rel="stylesheet" href="../../assets/styles/common.css" />
 </head>
 
 <style>
@@ -88,6 +88,7 @@
       }
     });
 
+container.addEventListener('product-add', (event) => console.log(event))
   </script>
 </body>
 
